Improve php config

--- a/php-7.3-cli-alpine/Dockerfile
+++ b/php-7.3-cli-alpine/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-cli-alpine
 
 WORKDIR /usr/src/app
 
-COPY ./docker-entrypoint.sh /usr/local/bin/
+COPY ./docker-entrypoint /usr/local/bin
 
 RUN apk update add --no-cache git tzdata \
     && docker-php-ext-install mbstring tokenizer mysqli pdo_mysql sockets
@@ -11,5 +11,5 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 ENV APP_ROOT .
 
-ENTRYPOINT docker-entrypoint.sh
+ENTRYPOINT ["docker-entrypoint"]
 
