--- a/php-5.6-fpm-alpine/Dockerfile
+++ b/php-5.6-fpm-alpine/Dockerfile
@@ -2,7 +2,7 @@ FROM php:5.6-fpm-alpine
 
 COPY ./tzone.ini /usr/local/etc/php/conf.d/
 
-RUN docker-php-ext-install pdo pdo_mysql
+RUN apk update add --no-cache git tzdata \
+    && docker-php-ext-install mbstring tokenizer mysqli pdo_mysql sockets
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
