--- a/php-5.6-fpm/Dockerfile
+++ b/php-5.6-fpm/Dockerfile
@@ -5,18 +5,18 @@ COPY ./tzone.ini /usr/local/etc/php/conf.d/
 RUN apt-get update && apt-get install -y \
 	git \
 	tzdata \
-	zip \
+	libzip-dev \
 	libmcrypt-dev \
 	libjpeg-dev \
-    libpng-dev \
+  libpng-dev \
 	libvpx-dev \
 	libxpm-dev \
 	&& docker-php-ext-configure gd \
-		--with-png-dir \
-		--with-jpeg-dir \
-		--with-vpx-dir \
-		--with-xpm-dir \
-  	&& docker-php-ext-install mcrypt mbstring tokenizer mysqli pdo_mysql sockets gd \
+  --with-png-dir \
+	--with-jpeg-dir \
+	--with-vpx-dir \
+	--with-xpm-dir \
+  && docker-php-ext-install mcrypt mbstring tokenizer mysqli pdo_mysql sockets gd zip \
 	&& apt-get clean
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
