--- a/php-7.3-fpm/Dockerfile
+++ b/php-7.3-fpm/Dockerfile
@@ -2,7 +2,7 @@ FROM php:7.3-fpm
 
 COPY ./tzone.ini /usr/local/etc/php/conf.d/
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
 	git \
 	tzdata \
 	libzip-dev \
@@ -11,11 +11,30 @@ RUN apt-get update && apt-get install -y \
   libpng-dev \
 	libvpx-dev \
 	libxpm-dev \
-	&& docker-php-ext-configure gd \
+  libfreetype6-dev \
+  libmagickwand-dev
+
+
+RUN pecl install imagick
+
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
+
+RUN docker-php-ext-configure gd \
 	--with-png-dir \
 	--with-jpeg-dir \
 	--with-xpm-dir \
-  && docker-php-ext-install mbstring tokenizer mysqli pdo_mysql sockets gd zip \
-	&& apt-get clean
+  --with-freetype-dir
+
+RUN docker-php-ext-install \
+  mbstring \
+  tokenizer \
+  mysqli \
+  pdo_mysql \
+  sockets \
+  gd \
+  zip
+
+RUN docker-php-ext-enable imagick
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
