--- a/php-laravel/8.0-supervisor-alpine/Dockerfile
+++ b/php-laravel/8.0-supervisor-alpine/Dockerfile
@@ -2,9 +2,13 @@ FROM quetzalarc/laravel-php:8.0-cli-alpine
 
 RUN apk add --no-cache supervisor
 
+RUN rm /usr/local/bin/docker-php-entrypoint
+
 RUN mkdir -p /etc/supervisor/conf.d
+
+COPY ./docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 
 COPY ./supervisord.conf /etc/supervisor/supervisord.conf
 
-CMD ["supervisord", "-nc", "/etc/supervisor/supervisord.conf"]
+ENTRYPOINT ["docker-entrypoint.sh"]
 
