--- a/php-laravel/8.0-cron-alpine/Dockerfile
+++ b/php-laravel/8.0-cron-alpine/Dockerfile
@@ -1,6 +1,8 @@
 FROM quetzalarc/laravel-php:8.0-cli-alpine
 
-RUN mkdir -p /etc/periodic/1m
+RUN addgroup -S -g1000 appgroup && adduser -S -H -G appgroup -u1000 appuser
+
+RUN mkdir -p /etc/periodic/1min
 
 RUN echo "*       *       *       *       *       run-parts /etc/periodic/1min" >> /etc/crontabs/root
 
