--- a/php-laravel/8.1-cron-alpine/Dockerfile
+++ b/php-laravel/8.1-cron-alpine/Dockerfile
@@ -1,6 +1,6 @@
 FROM quetzalarc/php-laravel:8.1-cli-alpine
 
-RUN mkdir -p /etc/periodic/1m
+RUN mkdir -p /etc/periodic/1min
 
 RUN echo "*       *       *       *       *       run-parts /etc/periodic/1min" >> /etc/crontabs/root
 
