--- a/php-laravel/8.2/fpm-alpine/Dockerfile
+++ b/php-laravel/8.2/fpm-alpine/Dockerfile
@@ -1,8 +1,8 @@
 FROM php:8.2-fpm-alpine
 
-RUN apk add --no-cache libzip-dev tzdata unzip zip
+RUN apk add --no-cache icu-dev libzip-dev tzdata unzip zip
 
-RUN docker-php-ext-install mysqli pdo pdo_mysql zip
+RUN docker-php-ext-install intl mysqli pcntl pdo pdo_mysql zip
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
